SonarQube fixes.